--- a/webservice/static/html/gui_workflow_editor.html
+++ b/webservice/static/html/gui_workflow_editor.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<script src="../static/js/jquery-2.1.4.min.js"></script>
+<script src="../js/jquery-2.1.4.min.js"></script>
 <style type="text/css">
 
 div.box {
@@ -11,29 +11,37 @@ div.box {
     border-radius: 0.5em;
     background: white;
     position: absolute;
-    z-index: 1;
+    z-index: 2;
+    opacity: 0.99;
 }
 
-div.depbuttonbox1 {
-   z-index: 1;
-   position:absolute;
-   bottom: 0;
-   left: 0;
-   right: 0;
-}
 
 div.depbuttonbox2 {
-   z-index: 1;
-   position: relative;
-   margin-left: 30%;
+   z-index: 2;
+   position: absolute;
    width: 2em;
+   height: 2em;
 }
 
 div.depbox {
-    z-index: 0;
+    z-index: -1;
     position: absolute;
-    border-left: 2px solid red;
-    border-bottom: 2px solid red;
+}
+
+div.depbox1 {
+   position:absolute;
+   top: 0;
+   bottom: 0;
+   left: 0;
+   right: 0;
+   border-left: 2px solid red;
+   border-bottom: 2px solid red;
+}
+
+div.depbox1.uphill {
+   border-left: 0px solid white !important; 
+   border-right: 2px solid red;
+   border-bottom: 2px solid red;
 }
 
 div.box.selected {
@@ -64,13 +72,16 @@ div.box.selected {
 div#deps {
   /* try to force a stacking context... */
   opacity: 0.99; 
+  border: 1px solid green;
+  width: 100%;
+  height: 30ex;
 }
 
 </style>
 </head>
 <body onload="main()">
 
-<div id="deps">
+<div id="deps" ondrop="drop_it(event)" ondragover="allowDrop(event)">
 </div>
 
 
@@ -320,6 +331,7 @@ function make_form_popup(stage, stage_dict,  default_dict, toppos, leftpos) {
     leftpos = leftpos + 2
     res.push('<div class="popup_parent">')
     res.push('<form id="fields_' + stage + '" class="popup_form" style="display: none; top: '+ toppos.toString()+'em; left: ' +leftpos.toString()+'em;">' )
+    res.push('<input id="_tag" type="hidden" value="%s">' % stage)
     for ( k in stage_dict ) {
        if (stage_dict[k] == default_dict[k]) {
            val=""
@@ -382,6 +394,7 @@ function draw_stages(dd, tb_id) {
     var deps
     var prevdep = ''
     var toppos, leftpos
+    var stage
     for( i in csl) {
         stage = csl[i]
         sd = dd["campaign_stage " + stage]
@@ -398,9 +411,22 @@ function draw_stages(dd, tb_id) {
         toppos = cur_row * 6;
         leftpos = cur_col * 12;
 
-        document.getElementById('deps').innerHTML += '<div class="box" style="top: ' + toppos + 'em ; left: ' +leftpos+ 'em;" onclick="toggle_box_selected(\''+stage+'\')" id="'+stage+'">' + stage + '<br>' + make_form_button(stage, sd, dd["global"] ) + '</div>' + make_form_popup(stage, sd, dd["global"] , toppos, leftpos)
+        document.getElementById('deps').innerHTML += '<div draggable="True" ondragstart="drag_start(event)" class="box" style="top: ' + toppos + 'em ; left: ' +leftpos+ 'em;" onclick="toggle_box_selected(\''+stage+'\')" id="'+stage+'">' + stage + '<br>' + make_form_button(stage, sd, dd["global"] ) + '</div>' + make_form_popup(stage, sd, dd["global"] , toppos, leftpos)
         // update where we want to be...
     }
+
+
+    toppos = (cur_row + 1) * 6;
+
+    document.getElementById('deps').innerHTML += '<div draggable="True" ondragstart="drag_start(event)" class="box" style="top:'+toppos.toString()+'em; left: 0em;" onclick="toggle_box_selected(\'defaults\')">' + 'defaults' + '<br>' + make_form_button('defaults', dd["global"],{} ) + '</div>'+ make_form_popup('defaults', dd["global"],{}, toppos, 0 )
+
+    draw_dependency_lines(dd)
+}
+
+function draw_dependency_lines(dd) {
+    var csl = dd["campaign"]["campaign_stage_list"].split(" ")
+    var deps
+    var stage
 
     for( i in csl) {
         stage = csl[i]
@@ -409,10 +435,28 @@ function draw_stages(dd, tb_id) {
             draw_dependency(deps["campaign_stage_1"], stage, dd)
         }
     }
+}
 
-    toppos = (cur_row + 1) * 6;
+function clear_dependency_lines(){
+   var l, i, j;
+   var cleanlist = [ "depbox", "depbuttonbox2", "popup_box" ]
 
-    document.getElementById('deps').innerHTML += '<div class="box" style="top:'+toppos.toString()+'em; left: 0em;" onclick="toggle_box_selected(\'defaults\')">' + 'defaults' + '<br>' + make_form_button('defaults', dd["global"],{} ) + '</div>'+ make_form_popup('defaults', dd["global"],{}, toppos, 0 )
+   var l2 = []
+   for (j in cleanlist) {
+       l = document.getElementsByClassName(cleanlist[j]);
+       /* this looks goofy, but the list shifts out from under you
+        * and you only get every other one if you do the ascending loop
+        */
+       n = l.length
+       for ( i = n-1 ; i >= 0; i--) {
+           l[i].parentNode.removeChild(l[i])
+       }
+    }
+}
+
+function re_draw_dependency_lines(dd) {
+    clear_dependency_lines();
+    draw_dependency_lines(dd);
 }
 
 function get_back_values(id) {
@@ -457,27 +501,29 @@ function toggle_box_selected(id) {
 function draw_dependency(stage1, stage2, dd) {
    var e1 = document.getElementById(stage1)   
    var e2 = document.getElementById(stage2)   
-   var br = e1.parentNode.getBoundingClientRect()
+   var top = e1.parentNode
+   var br = top.getBoundingClientRect()
    var e1r = e1.getBoundingClientRect()
    var e2r = e2.getBoundingClientRect()
-   var ulx, uly, lrx, lry, w, h
-   if ((e2r.top - e1r.top) > 20 ) {
-       /* go from bottom to side */
-       ulx = (e1r.left + e1r.right) / 2
-       uly = e1r.bottom 
-   } else {
-       /* go from side to side */
-       ulx = e1r.right  
-       uly = (e1r.top + e1r.bottom) / 2 
-   }
+   var x1, x2, y1, y2, midx, midy, ulx, uly, lrx, lry, w, h
 
-   /* our lower right is always the left side of the dest box */
-   lrx = e2r.left  
-   lry = (e2r.top + e2r.bottom) / 2
+   /* just go from center of one box to the other */
+   x1 = (e1r.left + e1r.right) / 2
+   x2 = (e2r.left + e2r.right) / 2
+   y1 = (e1r.bottom  + e1r.top) / 2
+   y2 = (e2r.top + e2r.bottom) / 2
+   ulx = Math.min(x1, x2)
+   lrx = Math.max(x1, x2)
+   uly = Math.min(y1, y2)
+   lry = Math.max(y1, y2)
+
+   var midx = (x1+x2)/2
 
    /* width and height... */
    w = lrx - ulx
    h = lry - uly
+
+   var uphill = (y2 >= y1)
 
    var dep = document.createElement("DIV")
    dep.className = 'depbox'
@@ -488,14 +534,24 @@ function draw_dependency(stage1, stage2, dd) {
    dep.style.height = h.toString() + "px"
    dep.style.width = w.toString()+"px"
 
+
    var db = document.createElement("DIV")
    db.id = 'dep_box' + stage1 + '_' + stage2
-   db.className = 'depbuttonbox1'
+   if(  uphill ) {
+       db.className = 'depbox1';
+   } else {
+       db.className = 'depbox1 uphill';
+   }
+   dep.appendChild(db)
+   top.appendChild(dep)
+
    var db2 = document.createElement("DIV")
    db2.className = 'depbuttonbox2'
-   db.appendChild(db2)
-   dep.appendChild(db)
-   document.body.appendChild(dep)
+   db2.style.position='absolute'
+   db2.style.top = lry.toString()+"px"
+   db2.style.left = (midx-10).toString()+"px"
+   top.appendChild(db2)
+
    db2.innerHTML = deps_form(stage1, stage2, dd)
 }
 
@@ -503,6 +559,27 @@ function getSearchParams(){
  var p={};
  location.search.replace(/[?&]+([^=&]+)=([^&]*)/gi,function(s,k,v){p[k]=v})
  return p;
+}
+
+function allowDrop(ev) {
+    ev.preventDefault();
+}
+
+function drop_it(ev) { 
+    ev.preventDefault();
+    var id = ev.dataTransfer.getData("text")
+    var d = document.getElementById(id)
+    if (d != null) {
+        d.style.left = ev.x.toString() + "px"
+        d.style.top = ev.y.toString() + "px"
+    } else {
+       alert("could not find: " + id)
+    }
+    re_draw_dependency_lines(document.edit_dict)
+}
+
+function drag_start(ev) {
+   ev.dataTransfer.setData("text",ev.target.id)
 }
 
 </script>
