gui_editor_3 stuff -- now drags stay where you moved them (yay!!)

--- a/webservice/static/html/gui_editor_3.html
+++ b/webservice/static/html/gui_editor_3.html
@@ -149,7 +149,7 @@ function test1() {
 }
 
 function main() {
-   args = getSearchParams()
+   args = mwm_utils.getSearchParams()
    if (args['campaign'] != undefined) {
        $.ajax( {
          url: args['_base_']+'/campaign_deps_ini?tag=' + args['campaign']
