test in samdev even in test...

--- a/webservice/static/html/gui_editor_3.html
+++ b/webservice/static/html/gui_editor_3.html
@@ -19,7 +19,7 @@ completion_type=complete
 completion_pct=95
 
 [campaign]
-experiment=uboone
+experiment=samdev
 poms_role=production
 tag=split_merge
 campaign_stage_list=split merge_a merge_b merge_c
@@ -106,7 +106,7 @@ completion_type=complete
 completion_pct=95
 
 [campaign]
-experiment=sbnd
+experiment=samdev
 poms_role=production
 tag= mcc_test_1
 campaign_stage_list=sbnd_gen_test sbnd_g4_test sbnd_detsim_test sbnd_reco_test sbnd_anatree_test
